tests/hostPorts/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-hostports
spec:
  validationFailureAction: enforce
  rules:
    - name: host-ports
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Use of host ports is limited. The fields spec.containers[*].ports[*].hostPort
          and spec.initContainers[*].ports[*].hostPort must be in a given range
        pattern:
          spec:
            =(initContainers):
              - =(ports):
                  - =(hostPort): ">=80 & <=9000"
            =(ephermeralContainers):
              - =(ports):
                  - =(hostPort): ">=80 & <=9000"
            containers:
              - =(ports):
                  - =(hostPort): ">=80 & <=9000"
